# mujoco_mpc

./: .gitignore  CMakeLists.txt  my_main_file
mjpc/: CMakeLists.txt  TODO.txt  agent.cc  agent.h  app.cc  main.cc  simulate.cc  simulate.h
mjpc/grpc/: agent_server.cc
mjpc/tasks/: CMakeLists.txt  tasks.cc
mjpc/tasks/G1/balance_simple/: balance_simple.h
mjpc/tasks/G1/utility/: reward_computation.cpp
mjpc/tasks/G1/walk/: G1_walk.cc  G1_walk.h  task.xml
mjpc/tasks/H1/: universal_reward.cpp  universal_reward.h
mjpc/tasks/H1/balance_simple/: balance_simple.cc  balance_simple.h  task.xml
mjpc/tasks/H1/h1/: h1_balance_pos.xml  h1_motor.xml  h1_pos.xml  h1_sensors.xml
mjpc/tasks/H1/package/: package.cc  package.h  task_package.xml
mjpc/tasks/H1/reach/: H1_reach.cc  H1_reach.h  task.xml
mjpc/tasks/H1/utility/: reward_computation.cpp  reward_computation.h
mjpc/tasks/H1/walk/: H1_walk.cc  H1_walk.h  task.xml
mjpc/tasks/Humanoid_Bench_H1/balance/: H1_balance.cc  H1_balance.h  H1_balance_simple_hand.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/balance_simple/: balance_simple.cc  balance_simple.h  task.xml
mjpc/tasks/Humanoid_Bench_H1/basic_locomotion/: climbing_upwards_reward.cc  compute_basic_reward.cpp  compute_basic_reward.h  walk_reward.cc
mjpc/tasks/Humanoid_Bench_H1/basketball/: H1_basketball.cc  H1_basketball.h  H1_basketball_gripper.xml  H1_basketball_hand.xml  H1_basketball_pos.xml  H1_basketball_simple_hand.xml  H1_basketball_strong.xml  H1_basketball_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/bookshelf/: H1_bookshelf.cc  H1_bookshelf.h  H1_bookshelf_gripper.xml  H1_bookshelf_hand.xml  H1_bookshelf_pos.xml  H1_bookshelf_simple_hand.xml  H1_bookshelf_strong.xml  H1_bookshelf_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/cabinet/: H1_cabinet.cc  H1_cabinet.h  H1_cabinet_gripper.xml  H1_cabinet_hand.xml  H1_cabinet_pos.xml  H1_cabinet_simple_hand.xml  H1_cabinet_strong.xml  H1_cabinet_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/cube/: H1_cube.cc  H1_cube.h  H1_cube_gripper.xml  H1_cube_hand.xml  H1_cube_pos.xml  H1_cube_simple_hand.xml  H1_cube_strong.xml  H1_cube_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/door/: H1_door.cc  H1_door.h  H1_door_gripper.xml  H1_door_hand.xml  H1_door_pos.xml  H1_door_simple_hand.xml  H1_door_strong.xml  H1_door_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/h1/: h1_motor.xml  h1_pos.xml  h1_sensors.xml
mjpc/tasks/Humanoid_Bench_H1/high_bar/: H1_high_bar_gripper.xml  H1_high_bar_hand.xml  H1_high_bar_pos.xml  H1_high_bar_simple_hand.xml  H1_high_bar_strong.xml  H1_high_bar_touch.xml  H1_highbar.cc  H1_highbar.h  H1_highbar_simple.cc  H1_highbar_simple.h  highbar_simple.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/insert/: H1_insert.cc  H1_insert.h  H1_insert_gripper.xml  H1_insert_hand.xml  H1_insert_pos.xml  H1_insert_simple_hand.xml  H1_insert_strong.xml  H1_insert_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/kitchen/: H1_kitchen.cc  H1_kitchen.h  H1_kitchen_gripper.xml  H1_kitchen_hand.xml  H1_kitchen_pos.xml  H1_kitchen_simple_hand.xml  H1_kitchen_strong.xml  H1_kitchen_touch.xml  kitchen.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/maze/: H1_maze.cc  H1_maze.h  H1_maze_gripper.xml  H1_maze_hand.xml  H1_maze_pos.xml  H1_maze_simple_hand.xml  H1_maze_strong.xml  H1_maze_touch.xml  maze.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/package/: H1_package.cc  H1_package.h  H1_package_gripper.xml  H1_package_hand.xml  H1_package_pos.xml  H1_package_simple_hand.xml  H1_package_strong.xml  H1_package_touch.xml  package.cc  package.h  task.xml  task_package.xml
mjpc/tasks/Humanoid_Bench_H1/poles/: H1_poles.cc  H1_poles.h  H1_poles_gripper.xml  H1_poles_hand.xml  H1_poles_pos.xml  H1_poles_simple_hand.xml  H1_poles_strong.xml  H1_poles_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/powerlift/: H1_powerlift.cc  H1_powerlift.h  H1_powerlift_gripper.xml  H1_powerlift_hand.xml  H1_powerlift_pos.xml  H1_powerlift_simple_hand.xml  H1_powerlift_strong.xml  H1_powerlift_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/push/: H1_push.cc  H1_push.h  H1_push_gripper.xml  H1_push_hand.xml  H1_push_pos.xml  H1_push_simple_hand.xml  H1_push_strong.xml  H1_push_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/reach/: H1_reach.cc  H1_reach.h  H1_reach_gripper.xml  H1_reach_hand.xml  H1_reach_pos.xml  H1_reach_simple_hand.xml  H1_reach_strong.xml  H1_reach_touch.xml  reach.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/room/: H1_room.cc  H1_room.h  H1_room_gripper.xml  H1_room_hand.xml  H1_room_pos.xml  H1_room_simple_hand.xml  H1_room_strong.xml  H1_room_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/spoon/: H1_spoon.cc  H1_spoon.h  H1_spoon_gripper.xml  H1_spoon_hand.xml  H1_spoon_pos.xml  H1_spoon_simple_hand.xml  H1_spoon_strong.xml  H1_spoon_touch.xml  spoon.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/truck/: H1_truck.cc  H1_truck.h  H1_truck_gripper.xml  H1_truck_hand.xml  H1_truck_pos.xml  H1_truck_simple_hand.xml  H1_truck_strong.xml  H1_truck_touch.xml  task.xml
mjpc/tasks/Humanoid_Bench_H1/window/: H1_window.cc  H1_window.h  H1_window_gripper.xml  H1_window_hand.xml  H1_window_pos.xml  H1_window_simple_hand.xml  H1_window_strong.xml  H1_window_touch.xml  task.xml
mjpc/tasks/humanoid_bench/: Readme.md  g1.xml  g1.xml.patch  h1.xml.patch  h1_pos.xml  walk_reward.cc
mjpc/tasks/humanoid_bench/balance/: Balance_H1.xml  balance.cc  balance.h
mjpc/tasks/humanoid_bench/basic_locomotion/: walk_reward.cc  walk_reward.h
mjpc/tasks/humanoid_bench/basketball/: H1_basketball.h  H1_basketball_simple_hand.xml
mjpc/tasks/humanoid_bench/door/: Door_H1.xml  H1_door.cc  H1_door.h  door.xml
mjpc/tasks/humanoid_bench/football/: Football.cc  Football.h  Football_H1.xml  football.xml
mjpc/tasks/humanoid_bench/g1/: g1.xml  g1_new.xml
mjpc/tasks/humanoid_bench/h1/: h1_motor.xml  h1_pos.xml
mjpc/tasks/humanoid_bench/maze/: H1_maze.cc  H1_maze.h  Maze_G1.xml  Maze_H1.xml  task.xml
mjpc/tasks/humanoid_bench/package/: H1_package.cc  H1_package.h  (+2 more)
mjpc/utility/: dm_control_utils_rewards.cpp
(+99 files in other folders)
